AWS S3 storage for videos and photos, instruments enum

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/melodymatch
-spring.datasource.username=postgres
-spring.datasource.password=Odinson.9
+spring.datasource.url=jdbc:postgresql://melodymatch.chey25ipoxwy.eu-north-1.rds.amazonaws.com:5432/postgres
+spring.datasource.username=melodymatch
+spring.datasource.password=melodymatch
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.show-sql=true
+aws.accessKeyId=AKIATWGNO57NE67SEZG7
+aws.secretKey=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
+s3.bucketName=melodymatchstorage
+s3.region=eu-north-1
+s3.maxFileSizeInMB=10
