--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "sass": "^1.66.1",
+    "socket.io-client": "^4.7.2",
+    "sockjs-client": "^1.6.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +52,7 @@
     "@types/react-redux": "^7.1.26",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
-    "@types/redux-thunk": "^2.1.0"
+    "@types/redux-thunk": "^2.1.0",
+    "@types/sockjs-client": "^1.5.1"
   }
 }
