--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-stomp": "^5.1.0",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "sass": "^1.66.1",
     "socket.io-client": "^4.7.2",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -53,6 +55,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-thunk": "^2.1.0",
-    "@types/sockjs-client": "^1.5.1"
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5"
   }
 }
