--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,6 @@
     "sass": "^1.66.1",
     "socket.io-client": "^4.7.2",
     "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -55,7 +54,6 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-thunk": "^2.1.0",
-    "@types/sockjs-client": "^1.5.1",
-    "@types/stompjs": "^2.3.5"
+    "@types/sockjs-client": "^1.5.1"
   }
 }
