Backend final version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.show-sql=true
 aws.accessKeyId=AKIATWGNO57NIJ64F7P7
 aws.secretKey=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
 s3.bucketName=melodymatchstorage
-s3.region=eu-north-1
-s3.maxFileSizeInMB=10
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
